k8s/aks/networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ocr-api-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: ocr-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
  type: LoadBalancer
